// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add a node with children 1`] = `
Graph {
  "counter": 3,
  "idFunction": [Function],
  "nodes": Map {
    "_root" => Object {
      "edges": Array [
        "a",
      ],
    },
    "a" => Object {
      "data": Object {
        "text": "question",
      },
      "edges": Array [
        "b",
        "c",
      ],
      "type": 100,
    },
    "b" => Object {
      "data": Object {
        "text": "a1",
      },
      "edges": Array [],
      "type": 200,
    },
    "c" => Object {
      "data": Object {
        "text": "a2",
      },
      "edges": Array [],
      "type": 200,
    },
  },
}
`;

exports[`move a node 1`] = `
Graph {
  "counter": 3,
  "idFunction": [Function],
  "nodes": Map {
    "_root" => Object {
      "edges": Array [
        "a",
      ],
    },
    "a" => Object {
      "data": Object {
        "text": "question",
      },
      "edges": Array [
        "c",
        "b",
      ],
      "type": 100,
    },
    "b" => Object {
      "data": Object {
        "text": "a1",
      },
      "edges": Array [],
      "type": 200,
    },
    "c" => Object {
      "data": Object {
        "text": "a2",
      },
      "edges": Array [],
      "type": 200,
    },
  },
}
`;

exports[`remove a child node 1`] = `
Graph {
  "counter": 3,
  "idFunction": [Function],
  "nodes": Map {
    "_root" => Object {
      "edges": Array [
        "a",
      ],
    },
    "a" => Object {
      "data": Object {
        "text": "question",
      },
      "edges": Array [
        "b",
      ],
      "type": 100,
    },
    "b" => Object {
      "data": Object {
        "text": "a1",
      },
      "edges": Array [],
      "type": 200,
    },
  },
}
`;

exports[`remove a node with children 1`] = `
Graph {
  "counter": 3,
  "idFunction": [Function],
  "nodes": Map {
    "_root" => Object {
      "edges": Array [],
    },
  },
}
`;

exports[`updating a node add a field to a without affecting existing data 1`] = `
Graph {
  "counter": 3,
  "idFunction": [Function],
  "nodes": Map {
    "_root" => Object {
      "edges": Array [
        "a",
      ],
    },
    "a" => Object {
      "data": Object {
        "text": "question",
      },
      "edges": Array [
        "b",
        "c",
      ],
      "type": 100,
    },
    "b" => Object {
      "data": Object {
        "foo": "bar",
        "text": "a1",
      },
      "edges": Array [],
      "type": 200,
    },
    "c" => Object {
      "data": Object {
        "text": "a2",
      },
      "edges": Array [],
      "type": 200,
    },
  },
}
`;

exports[`updating a node remove existing data 1`] = `
Graph {
  "counter": 3,
  "idFunction": [Function],
  "nodes": Map {
    "_root" => Object {
      "edges": Array [
        "a",
      ],
    },
    "a" => Object {
      "data": Object {
        "text": "question",
      },
      "edges": Array [
        "b",
        "c",
      ],
      "type": 100,
    },
    "b" => Object {
      "data": Object {
        "text": "a1",
      },
      "edges": Array [],
      "type": 200,
    },
    "c" => Object {
      "data": Object {
        "text": "a2",
      },
      "edges": Array [],
      "type": 200,
    },
  },
}
`;

exports[`updating a node replace existing data 1`] = `
Graph {
  "counter": 3,
  "idFunction": [Function],
  "nodes": Map {
    "_root" => Object {
      "edges": Array [
        "a",
      ],
    },
    "a" => Object {
      "data": Object {
        "text": "question",
      },
      "edges": Array [
        "b",
        "c",
      ],
      "type": 100,
    },
    "b" => Object {
      "data": Object {
        "foo": "bar2",
        "text": "a1",
      },
      "edges": Array [],
      "type": 200,
    },
    "c" => Object {
      "data": Object {
        "text": "a2",
      },
      "edges": Array [],
      "type": 200,
    },
  },
}
`;
